--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.AxezzibleRestaurants"
         tools:targetApi="31">
         <activity
-            android:name=".detailsActivity"
+            android:name=".DetailsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
